Fixes for 1.20.1